增加通过环境变量设置root用户密码

--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -2,6 +2,8 @@ FROM azi03/java-server:1.8
 
 COPY sshd.start /etc/local.d/sshd.start
 
+ENV ROOT_PASSWORD=admin
+
 RUN apk update && \
 	apk add --no-cache openssh-server openssh-client && \
 	sed -i "s/#PermitRootLogin.*/PermitRootLogin yes/g" /etc/ssh/sshd_config && \
@@ -9,7 +11,7 @@ RUN apk update && \
     ssh-keygen -t rsa -P "" -f /etc/ssh/ssh_host_rsa_key && \
     ssh-keygen -t ecdsa -P "" -f /etc/ssh/ssh_host_ecdsa_key && \
     ssh-keygen -t ed25519 -P "" -f /etc/ssh/ssh_host_ed25519_key && \
-    echo "root:admin" | chpasswd && \
+    echo "root:${ROOT_PASSWORD}" | chpasswd && \
 	chmod +x /etc/local.d/sshd.start
 	
 ENTRYPOINT ["/etc/local.d/sshd.start"]
